# autoswagger

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  ruff.toml
autoswagger/: __init__.py  __main__.py  analysis.py  http.py  main.py  models.py  scanner.py
